--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,6 @@
 PORT=3000
 DATABASE_PASS="yourpass"
 DATABASE_URL="postgresql://<user>:<password>@<host>:<port>/<database>?schema=public"
-JWT_SECRET="your_jwt_secret_key"
+JWT_SECRET="your_jwt_secret_key_must_have_32_characters"
 SUPABASE_URL="https://your-supabase-url.supabase.co"
 SUPABASE_KEY="your-supabase-anon-key"
