--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,7 @@
+NODE_ENV="dev|qa|prod"
 PORT=3000
+DATABASE_NAME="dbname"
+DATABASE_USER="yourpass"
 DATABASE_PASS="yourpass"
 DATABASE_URL="postgresql://<user>:<password>@<host>:<port>/<database>?schema=public"
 JWT_SECRET="your_jwt_secret_key_must_have_32_characters"
