add PostgreSQL migration scripts for users and billing_statements tables

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc",
     "dev": "ts-node src/index.ts",
     "prisma:migrate": "prisma migrate dev",
+    "migrate:postgres:dev": "dotenv -e .env.dev -- prisma migrate dev",
     "prisma:studio": "prisma studio",
     "compose:dev": "docker compose --env-file .env.dev up -d"
   },
