--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^6.3.1",
     "@types/express": "^5.0.0",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.8.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
@@ -27,5 +28,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "@types/compression": "^1.7.5"
   }
 }
