--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,13 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "paths": {
+      "@/*": ["./src/*"],
+      "__root__/*": ["./"]
+    }
   },
+
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
