--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,18 @@
 version: "3.8"
 
 services:
-  db-dev:
+  db_dev:
     image: postgres:latest
+    container_name: postgres-db
     restart: always
     environment:
-      POSTGRES_DB: ${DATABASE_NAME}
-      POSTGRES_USER: ${DATABASE_USER}
-      POSTGRES_PASSWORD: ${DATABASE_PASS}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
+      POSTGRES_DB: ${POSTGRES_DB:-mydb}
     volumes:
       - ./postgres-dev-data:/var/lib/postgresql/data
     ports:
       - 5432:5432
+
+volumes:
+  postgres_data:
