--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.3.1",
+    "@supabase/supabase-js": "^2.49.1",
     "@types/express": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.8.0",
