--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "ms": "^2.1.3",
     "prisma": "^6.3.1",
     "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
@@ -32,6 +33,8 @@
   },
   "devDependencies": {
     "@types/compression": "^1.7.5",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/ms": "^2.1.0",
     "dotenv-cli": "^8.0.0",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0"
