--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,9 @@ DATABASE_URL="postgresql://<user>:<password>@<host>:<port>/<database>?schema=pub
 JWT_SECRET="your_jwt_secret_key_must_have_32_characters"
 SUPABASE_URL="https://your-supabase-url.supabase.co"
 SUPABASE_KEY="your-supabase-anon-key"
+CRYPTO_SECRET="your_32_byte_secret_key_in_hex_format"  # 64 characters in hex (32 bytes)
+CRYPTO_IV="your_16_byte_iv_in_hex_format"         # 32 characters in hex (16 bytes
+
+
+#node -e "console.log(require('crypto').randomBytes(32).toString('hex'))" for CRYPTO_SECRET
+#node -e "console.log(require('crypto').randomBytes(16).toString('hex'))" for CRYPTO_IV
