--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "prisma:migrate:dev": "dotenv -e .env.dev prisma migrate dev",
     "migrate:postgres:dev": "dotenv -e .env.dev -- prisma migrate dev",
     "prisma:studio": "prisma studio",
-    "compose:dev": "docker compose --env-file .env.dev up -d"
+    "compose:dev": "docker compose --env-file .env.dev up -d",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "keywords": [],
   "author": "",
@@ -31,8 +33,11 @@
   },
   "devDependencies": {
     "@types/compression": "^1.7.5",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "dotenv-cli": "^8.0.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.6",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0"
   }
