--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "ms": "^2.1.3",
     "prisma": "^6.3.1",
     "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
@@ -35,6 +36,7 @@
     "@types/compression": "^1.7.5",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/ms": "^2.1.0",
     "dotenv-cli": "^8.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.6",
