feat: add DIRECT_URL to environment configuration and Prisma schema

--- a/.env.template
+++ b/.env.template
@@ -4,6 +4,7 @@ DATABASE_NAME="dbname"
 DATABASE_USER="yourpass"
 DATABASE_PASSWORD="yourpass"
 DATABASE_URL="postgresql://<user>:<password>@<host>:<port>/<database>?schema=public"
+DIRECT_URL="postgresql://<user>:<password>@<host>:<port>/<database>?schema=public"
 JWT_SECRET="your_jwt_secret_key_must_have_32_characters"
 SUPABASE_URL="https://your-supabase-url.supabase.co"
 SUPABASE_KEY="your-supabase-anon-key"
