--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^6.3.1",
+    "@prisma/client": "^6.5.0",
     "@supabase/supabase-js": "^2.49.1",
     "@types/express": "^5.0.0",
     "compression": "^1.8.0",
@@ -27,17 +27,20 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "ms": "^2.1.3",
-    "prisma": "^6.3.1",
+    "prisma": "^6.5.0",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3",
-    "zod": "^3.24.1"
+    "typescript": "^5.8.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/compression": "^1.7.5",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/ms": "^2.1.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "dotenv-cli": "^8.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.6",
